installed bootstrap gem and removed manual setup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,29 +28,49 @@
     }
   </style>
 
-
-  <!-- Custom styles for this template -->
-  <link href="dashboard.css" rel="stylesheet">
 </head>
 
 <body>
 
 
-  <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">MyRecs</a>
-    <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+  <header class="navbar bg-primary sticky-top flex-md-nowrap p-0">
+    <a class="navbar-brand text-white col-md-3 col-lg-2 me-0 px-3" href="#">MyRecs</a>
+
+    <button 
+      class="navbar-toggler position-absolute d-md-none collapsed" 
+      type="button" 
+      data-toggle="collapse" 
+      data-target="#sidebarMenu" 
+      aria-controls="sidebarMenu" 
+      aria-expanded="false" 
+      aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+    <%
+=begin%>
+ <div id="sidebarMenu" class="collapse show">
+      collapsible content
+    </div> 
+<%
+=end%>
+
     <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
     <ul class="navbar-nav px-3">
-      <li class="nav-item text-nowrap">
-        <%= link_to "Login", new_account_session_path %>
+
+      <%= link_to new_account_session_path, class: " text-decoration-none" do %>
+      <span class="navbar-brand text-white">Log in</span>
+      <% end %>
       </li>
     </ul>
+
   </header>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
   <div class="container-fluid">
+    <%= yield %>
+    <%
+=begin%>
+
     <div class="row">
       <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
         <div class="position-sticky pt-3">
@@ -80,7 +100,7 @@
               </a>
             </li>
           </ul>
-          <%= yield %>
+
 
         </div>
       </nav>
@@ -162,14 +182,10 @@
         </div>
       </main>
     </div>
+    <%
+=end%>
   </div>
 
-
-  <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js" integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha" crossorigin="anonymous"></script>
-  <script src="dashboard.js"></script>
 </body>
 
 </html>
