--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,43 +31,74 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
+  <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <div class="container-fluid">
+      <div class="p-2 ps-4">
+        <%= link_to root_path, class: "text-decoration-none" do %>
+        <h1 class="h3 mb-0 text-white">MyRecs</h1>
+        <% end %>
+      </div>
 
-  <header class="navbar bg-primary sticky-top flex-md-nowrap p-0">
-    <a class="navbar-brand text-white col-md-3 col-lg-2 me-0 px-3" href="#">MyRecs</a>
+      <button class="navbar-toggler bg-danger" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <button 
-      class="navbar-toggler position-absolute d-md-none collapsed" 
-      type="button" 
-      data-toggle="collapse" 
-      data-target="#sidebarMenu" 
-      aria-controls="sidebarMenu" 
-      aria-expanded="false" 
-      aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+      <div id="sidebarMenu" class="navbar-collapse collapse">
+        <ul class="navbar-nav">
+          <li>
+            <%= link_to about_path, class: "text-decoration-none" do %>
+            <span class="navbar-brand text-white">About</span>
+            <% end %>
+          </li>
+          <li>
+
+            <%= link_to new_account_session_path, class: " text-decoration-none" do %>
+            <span class="navbar-brand text-white">Log in</span>
+            <% end %>
+          </li>
+        </ul>
+      </div>
+    </div>
+
     <%
 =begin%>
- <div id="sidebarMenu" class="collapse show">
-      collapsible content
-    </div> 
-<%
+    <input class="form-control form-control-dark w-50" type="text" placeholder="Search" aria-label="Search">
+    <%
 =end%>
 
-    <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
-    <ul class="navbar-nav px-3">
 
-      <%= link_to new_account_session_path, class: " text-decoration-none" do %>
-      <span class="navbar-brand text-white">Log in</span>
-      <% end %>
-      </li>
-    </ul>
-
-  </header>
+  </nav>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
   <div class="container-fluid">
     <%= yield %>
+
+    <footer>Footer</footer>
     <%
 =begin%>
 
@@ -185,6 +216,7 @@
     <%
 =end%>
   </div>
+  <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
