added user profile and rec models

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,18 +12,31 @@
  *
  */
 
+// $navbar-dark-disabled-color: rgba($white, .25) !default;
+// $navbar-dark-toggler-icon-bg: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='#{$navbar-dark-color}' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>") !default;
+
+
 $blue: #030D4F !default;
 $red: #FB0C06 !default;
 $yellow: #FFC52C !default;
 $green: #018849 !default;
 $light-grey: #E7EDEA;
 $pale-blue: #CEECEF;
+$white: #FFF;
+
+$navbar-dark-color: $white !default;
+$navbar-dark-hover-color: $yellow !default;
+$navbar-dark-active-color: $yellow !default;
+$navbar-dark-toggler-border-color: $white !default;
 
 $primary: $blue !default;
 
 $body-bg: $pale-blue !default;
 
+@import "bootstrap/scss/bootstrap";
 
 
-@import "bootstrap";
+
+
+
  
