--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,9 @@
 // $navbar-dark-toggler-icon-bg: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='#{$navbar-dark-color}' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>") !default;
 
 
-$blue: #030D4F !default;
+// $blue: #030D4F !default;
+$blue: #092A4C !default;
+$blueberry: #14526B !default;
 $red: #FB0C06 !default;
 $yellow: #FFC52C !default;
 $green: #018849 !default;
@@ -31,7 +33,7 @@ $navbar-dark-toggler-border-color: $white !default;
 
 $primary: $blue !default;
 
-$body-bg: $pale-blue !default;
+$body-bg: $light-grey !default;
 
 @import "bootstrap/scss/bootstrap";
 
