--- a/app/assets/stylesheets/public.scss
+++ b/app/assets/stylesheets/public.scss
@@ -1,4 +1,8 @@
 // Place all the styles related to the public controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-
+@media (min-width: 992px) {
+  div#mobileMenu {
+    justify-content: flex-end;
+  }
+}
