--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,1 +1,1 @@
-<h1>This is the About page</h1>
+<h1>MyRecs is a way to share links of your favorite products and recommendations with your friends.</h1>
