--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -1,11 +1,36 @@
 <main>
-  <%= link_to new_rec_path, class: "text-decoration-none" do %>
-  <button type="button" class="btn btn-primary">Add Rec</button>
-  <% end %>
+  <div class="pb-3 d-flex justify-content-center align-content-center">
+    <% if user_signed_in? %>
+    <%= link_to new_rec_path, class: "text-decoration-none" do %>
+    <button type="button" class="btn btn-primary">Add Rec</button>
+    <% end %>
+    <% else %>
+    <%= link_to new_user_session_path, class: "text-decoration-none" do %>
+    <button type="button" class="btn btn-primary">Add Rec</button>
+    <% end %>
+    <% end %>
+  </div>
 
-  <% @user_profiles.each do |prof| %>
-    <%= prof.name =%>
-  <% end %>
+  <div class="d-flex flex-wrap justify-content-center">
+
+    <% @user_profiles.each do |prof| %>
+    <div class="card m-2" style="width: 18rem;">
+      <div class="p-2 d-flex justify-content-center">
+        <img class="rounded-circle" src="https://placekitten.com/250/250" alt="Card image cap">
+      </div>
+      <div class="card-body text-center">
+        <h5 class="card-title">
+          <%= prof.name =%>
+        </h5>
+        <%= link_to user_profile_path(prof.user_id), class: "text-decoration-none" do %>
+        <button type="button" class="btn btn-primary">see recss</button>
+        <% end %>
+      </div>
+    </div>
+
+    <% end %>
+
+  </div>
 
 
 </main>
