--- a/app/views/recs/index.html.erb
+++ b/app/views/recs/index.html.erb
@@ -8,7 +8,7 @@
       <th>Title</th>
       <th>Link</th>
       <th>Description</th>
-      <th>User profile</th>
+      <th>User Id</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,7 +19,7 @@
         <td><%= rec.title %></td>
         <td><%= rec.link %></td>
         <td><%= rec.description %></td>
-        <td><%= rec.user_profile_id %></td>
+        <td><%= rec.user_id %></td>
         <td><%= link_to 'Show', rec %></td>
         <td><%= link_to 'Edit', edit_rec_path(rec) %></td>
         <td><%= link_to 'Destroy', rec, method: :delete, data: { confirm: 'Are you sure?' } %></td>
